--- a/index.html
+++ b/index.html
@@ -1,1 +1,76 @@
-<!Doctype HTML>
+<!DOCTYPE HTML>
+<html>
+
+  <head>
+    <style>
+      body {
+        background-color: #000011;
+        font-family: Verdana;
+      }
+
+      .title {
+        color: #00000000;
+        background-size: 100%;
+        background: -webkit-linear-gradient(180deg, #9600ff, #3333ff);
+        background-clip: text;
+        text-align: center;
+      }
+
+      .navbar {
+        display: inline;
+        color: white;
+        width: 100%;
+      }
+
+      .navitem {
+        padding-left: 20px;
+        padding-right: 20px;
+        text-align: center;
+        float: left;
+        list-style-type: none;
+      }
+
+      .navouter {
+        background-color: #000022;
+        padding: 10px;
+        width: 100%;
+      }
+
+      .sticky {
+        position: fixed;
+        top: 0;
+        width: 100%
+      }
+
+      .content {
+        color: white;
+        margin: 20px;
+      }
+
+    </style>
+  </head>
+
+  <body>
+    <div class="navouter sticky">
+      <ul class="navbar">
+        <li class="navitem">
+          Home
+        </li>
+        <li class="navitem">
+          Docs
+        </li>
+      </ul>
+    </div>
+    <h1 class="title" style="margin-top: 50px;">
+      AxolBotix Toolbox
+    </h1>
+    <h2 class="title">
+      The Toolbox for Everything Shortcuts
+    </h2>
+    <div class="content">
+      <p>
+      </p>
+    </div>
+  </body>
+
+</html>
