--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
       body {
         background-color: #000011;
         font-family: Verdana;
+        width: 100vw;
       }
 
       .title {
@@ -46,7 +47,11 @@
         color: white;
         margin: 20px;
       }
-
+      
+      .contentbox {
+        display: block;
+        width: 100%;
+      }
     </style>
   </head>
 
@@ -68,8 +73,9 @@
       The Toolbox for Everything Shortcuts
     </h2>
     <div class="content">
-      <p>
-      </p>
+      <div class="contentbox">
+      
+      </div>
     </div>
   </body>
 
