--- a/index.html
+++ b/index.html
@@ -28,11 +28,19 @@
         padding-right: 20px;
         text-align: center;
         float: left;
+        background-color: #000011;
         list-style-type: none;
+        transition-duration: 0.3s;
+        top: 50%;
+        height: 50px;
+        line-height: 50px;
+      }
+      
+      .navitem:hover {
+        background-color: #220033;
       }
 
       .navouter {
-        background-color: #000022;
         padding: 10px;
         width: 100%;
       }
@@ -59,14 +67,26 @@
     <div class="navouter sticky">
       <ul class="navbar">
         <li class="navitem">
-          Home
+          Archiver
         </li>
         <li class="navitem">
-          Docs
+          HTML Compiler
+        </li>
+        <li class="navitem">
+          Utilities
+        </li>
+        <li class="navitem">
+          Chat
+        </li>
+        <li class="navitem">
+          Photo Actions
+        </li>
+        <li class="navitem">
+          Webpage Actions
         </li>
       </ul>
     </div>
-    <h1 class="title" style="margin-top: 50px;">
+    <h1 class="title" style="margin-top: 70px;">
       AxolBotix Toolbox
     </h1>
     <h2 class="title">
