--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
         padding-right: 20px;
         text-align: center;
         float: left;
-        background-color: #000011;
+        background: #000011;
         list-style-type: none;
         transition-duration: 0.3s;
         top: 50%;
@@ -37,7 +37,7 @@
       }
       
       .navitem:hover {
-        background-color: #220033;
+        background: -webkit-linear-gradient(180deg, #25003f, #000041);
       }
 
       .navouter {
