--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
       }
       
       .navitem:hover {
-        background: -webkit-linear-gradient(180deg, #25003f, #000041);
+        background: -webkit-linear-gradient(#25003f, #000041);
       }
 
       .navouter {
