--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html>
 
   <head>
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
     <style>
       body {
         background-color: #000011;
@@ -60,32 +61,56 @@
       .contentbox {
         display: block;
         width: 100%;
+        border: white 0.1px solid;
+        border-radius: 10px;
+        padding: 10px;
+      }
+
+      a {
+        color: white;
+        text-decoration: none;
+      }
+
+      a:hover {
+        color: white;
       }
 
     </style>
   </head>
 
   <body>
-    <div class="navouter sticky">
+    <div class="navouter sticky container-fluid">
       <ul class="navbar">
-        <li class="navitem">
-          Archiver
-        </li>
-        <li class="navitem">
-          HTML Compiler
-        </li>
-        <li class="navitem">
-          Utilities
-        </li>
-        <li class="navitem">
-          Chat
-        </li>
-        <li class="navitem">
-          Photo Actions
-        </li>
-        <li class="navitem">
-          Webpage Actions
-        </li>
+        <a href="#archiver">
+          <li class="navitem">
+            Archiver
+          </li>
+        </a>
+        <a href="#compiler">
+          <li class="navitem">
+            HTML Compiler
+          </li>
+        </a>
+        <a href="#utilities">
+          <li class="navitem">
+            Utilities
+          </li>
+        </a>
+        <a href="#chat">
+          <li class="navitem">
+            Chat
+          </li>
+        </a>
+        <a href="#photo">
+          <li class="navitem">
+            Photo Actions
+          </li>
+        </a>
+        <a href="#webpage">
+          <li class="navitem">
+            Webpage Actions
+          </li>
+        </a>
       </ul>
     </div>
     <h1 class="title" style="margin-top: 70px;">
@@ -95,8 +120,23 @@
       The Toolbox for Everything Shortcuts
     </h2>
     <div class="content">
-      <div class="contentbox">
-
+      <div class="contentbox" id="archiver">
+        uwu
+      </div>
+      <div class="contentbox" id="compiler">
+        uwu
+      </div>
+      <div class="contentbox" id="utilities">
+        uwu
+      </div>
+      <div class="contentbox" id="chat">
+        uwu
+      </div>
+      <div class="contentbox" id="photo">
+        uwu
+      </div>
+      <div class="contentbox" id="webpage">
+        uwu
       </div>
     </div>
   </body>
