--- a/index.html
+++ b/index.html
@@ -155,10 +155,10 @@
     </center>
     <div class="content">
       <div class="contentbox contentleft" id="archiver">
-        Archive any webpage to your files to view later!
+        Archive any webpage to your files to view later with the Archiver!
       </div>
       <div class="contentbox contentright" id="compiler">
-        Run, edit, and share HTML code through Shortcuts!
+        Run, edit, and share HTML code through Shortcuts with the HTML Compiler!
       </div>
       <div class="contentbox contentleft" id="utilities">
         Utilities for everyday use in Shortcuts!
